--- a/index.html
+++ b/index.html
@@ -3,28 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEWAP Swap</title>
+    <title>MEWAP</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Подключение стилей -->
 </head>
 <body>
-    <h1>MEWAP Swap</h1>
+    <div class="container">
+        <h1>MEWAP</h1>
 
-    <form id="swapForm">
-        <label for="tokenIn">Token In (Address):</label>
-        <input type="text" id="tokenIn" placeholder="Enter token address for input" required><br>
+        <label for="tokenAddressA">Token A Address:</label>
+        <input type="text" id="tokenAddressA" placeholder="Token A Address" />
+        <br />
 
-        <label for="tokenOut">Token Out (Address):</label>
-        <input type="text" id="tokenOut" placeholder="Enter token address for output" required><br>
+        <label for="tokenAddressB">Token B Address:</label>
+        <input type="text" id="tokenAddressB" placeholder="Token B Address" />
+        <br />
 
-        <label for="amountIn">Amount In (Token amount to swap):</label>
-        <input type="number" id="amountIn" placeholder="Enter amount to swap" required><br>
+        <label for="amountIn">Amount to Swap (Token A):</label>
+        <input type="number" id="amountIn" placeholder="Amount" />
+        <br />
 
-        <label for="minAmountOut">Minimum Amount Out (Token amount to receive):</label>
-        <input type="number" id="minAmountOut" placeholder="Enter minimum amount out" required><br>
+        <label for="poolId">Pool ID:</label>
+        <input type="text" id="poolId" placeholder="Pool ID (hex)" />
+        <br />
 
-        <button type="button" id="swapButton">Swap Tokens</button>
-    </form>
+        <button id="swapButton">Swap Tokens</button>
+        <p id="status"></p>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.0/dist/ethers.umd.min.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- Подключение JavaScript -->
 </body>
 </html>
