--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <td>${row.tokenOut}</td> <!-- Token Out address -->
                         <td>${row.amountIn}</td>  <!-- Amount In dynamically set -->
                         <td>${row.amountOut}</td> <!-- Amount Out dynamically set -->
-                        <td><a href="https://etherscan.io/tx/${row.transactionHash}" target="_blank">${row.transactionHash.substring(0, 10)}...</a></td>
+                        <td><a href="https://explorer.aplocoin.com/tx/${row.transactionHash}" target="_blank">${row.transactionHash.substring(0, 10)}...</a></td>
                     </tr>`;
                 tableBody.innerHTML += newRow;
             });
